--- a/templates/include/common-footer.html
+++ b/templates/include/common-footer.html
@@ -31,9 +31,7 @@
 
 <script src="https://download.leancloud.cn/sdk/latest.js"></script>
 
-
-
-{% if basename!='index' and basename!='sdk_down' and basename !='demo' and basename !='start' and basename != 'weapp-domains' %}
+{% if basename !='index' and basename!='sdk_down' and basename !='demo' and basename !='start' and basename != 'weapp-domains' and basename != 'opencourse' %}
 <script src="custom/js/lib/contents.js"></script>
 <script src="custom/js/md.js"></script>
 {% endif %}
