--- a/templates/include/_sms.html
+++ b/templates/include/_sms.html
@@ -1,6 +1,6 @@
 <li>
   <span>短信服务使用指南</span>
-  <ul class="list-unstyled list-platform">
+  <ul class="list-unstyled tags">
     <li><a href="sms_guide-android.html">Android</a></li>
     <li><a href="sms_guide-objc.html">Objective-C</a></li>
     <li><a href="sms_guide-js.html">JavaScript</a></li>
