--- a/templates/pages/opencourse.html
+++ b/templates/pages/opencourse.html
@@ -17,7 +17,7 @@ opencourses:
   <h1 class="font-logo text-center" style="border-bottom:0;">视频公开课</h1>
   <div id="course-list">
     <div class="section">
-      <h2 class="section-title"><span class="font-logo">LeanCloud</span> 平台</h2>
+      <h2 class="section-title"><span class="font-logo">LeanCloud 平台</span></h2>
       <div class="row">
         <div class="section-content col-xs-12 col-sm-6 col-md-6">
           <h3>小程序</h3>
