--- a/templates/pages/opencourse.html
+++ b/templates/pages/opencourse.html
@@ -54,7 +54,7 @@ opencourses:
     <!-- end of .section -->
 
     <div class="section">
-      <h2 class="section-title">其他</h2>
+      <h2 class="section-title"><span>其他</span></h2>
       <div class="row">
         <div class="section-content col-xs-12 col-sm-6 col-md-6">
           <!-- <h3>小程序</h3> -->
