add helper function

--- a/views/leanengine_webhosting_guide.tmpl
+++ b/views/leanengine_webhosting_guide.tmpl
@@ -1,4 +1,5 @@
 {% set var_app_domain = '{应用的域名}' %}
+{% import "views/_helper.njk" as docs %}
 {% raw %}<script>$(window).load(function() {$('.do-expand-all').click();})</script>{% endraw %}
 # 网站托管开发指南 &middot; {{platformName}}
 
