fix: 首次创建营销模板，审核需2-5个工作日 (#2011)
* fix: 首次创建营销模板，审核需2-5个工作日

Closes #2008

* delete typos

* fix: sms signature is no longer required by template creation

* update the timeframe for template auditing

--- a/views/sms_guide.tmpl
+++ b/views/sms_guide.tmpl
@@ -164,6 +164,8 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 {{ docs.alert("自 2016 年 6 月起，营销类短信不允许由个人用户发送。所有营销类短信必须提供有效的公司或者企业名称，缺失名称将导致营销类短信无法发送。伪造或使用虚假名称将会被追究法律责任。") }}
 
+第一次提交营销模版，其使用的营销签名需要上报至运营商进行备案，审核过程将需要 2~5 个工作日。当营销签名完成了备案，此后再提交营销模版，审核将在工作日 4 小时内完成。
+
 ## 自定义短信内容
 
 通过短信模板，我们可以自定义短信的内容。因为短信模板是由开发者自己定义的，因此为了确保平台的安全以及稳定，我们的短信模板由**专人进行审核**，只有**通过审核**之后，在接口里的调用才会成功发送。
@@ -173,17 +175,13 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 ### 创建模板
 
-创建模板的截图如下：
-
-![sms_template](images/sms_template_v2.png)
-
-创建模板需要选择指定一个已经通过审核的 [短信签名](#短信签名)，并且选择模板的类型，目前支持以下三种类型：
+要创建短信模板，先进入控制台，选择一个应用，再选择 [消息 > 短信 > 设置](http://leancloud.cn/messaging.html?appid={{appid}}#/message/sms/conf)。选择需要的模板类型：
 
 - 通知类型
 - 验证码类型
 - 营销类型
 
-要创建短信模板，先进入控制台，选择一个应用，再选择 [消息 > 短信 > 设置](http://leancloud.cn/messaging.html?appid={{appid}}#/message/sms/conf)。**模板类型如果选择了通知类或者验证类，但短信内容如果涉及营销内容则无法通过审核。**要发送营销类短信请阅读 [营销类](#营销类)。
+如果模板类型选择了**通知类**或者**验证类**，但短信内容涉及到营销内容则无法通过审核。要发送营销类短信请阅读 [营销类](#营销类)。
 
 ### 使用模板
 
@@ -295,7 +293,7 @@ XX房东您好，租客{{ docs.mustache("guest_name") }}（手机号码：{{ doc
 
 【正确范例】
 
-{{ docs.bubble("X牌新款春装已经上市，明星夫妻同款你值得拥有！详情请咨询当地X牌门市店，或者直接登录 www.xxxx.com 查询门市店，或者拨打 010-00000000，凭短信可享 9 折优惠。") }}
+{{ docs.bubble("X牌新款春装已经上市，明星夫妻同款你值得拥有！详情请咨询当地X牌门市店，或者直接登录 www.xxxx.com 查询门市店，或者拨打 010-00000000，凭短信可享 9 折优惠。回复TD退订") }}
 
 #### 应用推广类
 
