chore: hide oauth provider.

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -322,7 +322,7 @@ layout: index.swig
                 {% endif %}
                 <li><a href="status_system.html#REST_API">应用内社交 REST API</a></li>
                 <li><a href="app_search_guide.html#搜索_API">应用内搜索 REST API</a></li>
-                <li><a href="oauth2_provider.html">LeanCloud 开放平台接入 OAuth2</a></li>
+                <!--<li><a href="oauth2_provider.html">LeanCloud 开放平台接入 OAuth2</a></li>-->
               </ul>
             </div>
             <div class="section-content col-xs-12 col-sm-6 col-md-6">
