--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -96,6 +96,7 @@ layout: index.swig
                     <li><a href="leanstorage_guide-swift.html">Swift</a></li>
                   </ul>
                 </li>
+                <li> <span><a href="livequery-guide.html">实时数据同步 LiveQuery 开发指南</a></span> </li>
                 <li> <span><a href="relation-guide.html">数据模型设计指南</a></span> </li>
                 <li> <span><a href="acl-guide.html">ACL 权限管理指南</a></span> </li>
                 {%- if node != 'qcloud' -%}
