fix: 强调用中间表替代 Relation
Closes #2113

--- a/views/leanstorage_guide.tmpl
+++ b/views/leanstorage_guide.tmpl
@@ -271,9 +271,9 @@ INSERT INTO Todo (title, content) VALUES ('工程师周会', '每周工程师会
 
 ### 关联数据
 
-#### `{{relationObjectName}}`
+#### `{{relationObjectName}}`（已弃用）
 
-{{ docs.alert("对关联数据进行查询、排序等复杂操作，建议使用 [中间表](relation-guide.html#使用中间表实现多对多关系_推荐_) 来构建对象之间的关系。") }}
+{{ docs.alert("以下文档仅供还在使用 Relation 的开发者做参考。对关联数据进行查询、排序等复杂操作，请使用 [中间表](relation-guide.html#使用中间表实现多对多关系_推荐_)。") }}
 
 对象可以与其他对象相联系。如前面所述，我们可以把一个 `{{baseObjectName}}` 的实例 A，当成另一个 `{{baseObjectName}}` 实例 B 的属性值保存起来。这可以解决数据之间一对一或者一对多的关系映射，就像关系型数据库中的主外键关系一样。
 
