--- a/views/leanengine_cloudfunction_guide.tmpl
+++ b/views/leanengine_cloudfunction_guide.tmpl
@@ -118,21 +118,8 @@ from leancloud import cloudfunc
 cloudfunc.run('averageStars', movie='夏洛特烦恼')
 ```
 ### 通过 REST API 调用云函数
-[REST API 调用云函数](rest_api.html#云函数-1) 是 LeanCloud 云端提供的统一的访问云函数的接口，所有的客户端 SDK 也都是封装了这个接口从而实现对云函数的调用。
 
-我们推荐使用 [Postman](http://www.getpostman.com/) 来调试 REST API，我们的社区中有一篇 [使用 Postman 调试 REST API 教程](https://forum.leancloud.cn/t/postman-rest-api/8638)。
-
-除了 GUI 工具，你也可以使用命令行进行调试：
-
-```sh
-curl -X POST -H "Content-Type: application/json; charset=utf-8" \
-       -H "X-LC-Id: {{appid}}" \
-       -H "X-LC-Key: {{appkey}}" \
-       -H "X-LC-Prod: 0" \
-       -d '{"movie":"夏洛特烦恼"}' \
-https://{{host}}/1.1/functions/averageStars
-```
-上述命令行实际上就是向云端发送一个 JSON 对象作为参数，参数的内容是要查询的电影的名字。
+请查看我们的 [云引擎 REST API 使用指南](leanengine-rest-api.html)。
 
 ### 云引擎调用云函数
 
