--- a/views/leanengine_cloudfunction_guide.tmpl
+++ b/views/leanengine_cloudfunction_guide.tmpl
@@ -30,6 +30,27 @@
 
 {% block initialize %}
 {% endblock %}
+## 切换云引擎环境
+
+专业版云引擎应用有「生产环境」和「预备环境」，切换方法为：
+
+```objc
+[AVCloud setProductionMode:NO]; // 调用预备环境
+```
+```java
+AVCloud.setProductionMode(false); // 调用预备环境
+```
+```php
+LeanClient::useProduction(false); // 调用预备环境
+```
+```javascript
+AV.setProduction(false); // 调用预备环境
+```
+```python
+leancloud.use_production(False) # 调用预备环境
+```
+
+[免费版云引擎应用只有「生产环境」](leanengine_plan.html#免费版) ，因此以上切换方法不适用。
 
 ## 云函数
 
@@ -179,29 +200,6 @@ from leancloud import cloudfunc
 
 cloudfunc.rpc('averageStars', movie='夏洛特烦恼')
 ```
-
-### 切换云引擎环境
-
-专业版云引擎应用有「生产环境」和「预备环境」，切换方法为：
-
-```objc
-[AVCloud setProductionMode:NO]; // 调用预备环境
-```
-```java
-AVCloud.setProductionMode(false); // 调用预备环境
-```
-```php
-LeanClient::useProduction(false); // 调用预备环境
-```
-```javascript
-AV.setProduction(false); // 调用预备环境
-```
-```python
-leancloud.use_production(False) # 调用预备环境
-```
-
-[免费版云引擎应用只有「生产环境」](leanengine_plan.html#免费版) ，因此以上切换方法不适用。
-
 
 ### 云函数错误响应码
 
