fix: append text for message recall and modify.

--- a/views/realtime_guide.tmpl
+++ b/views/realtime_guide.tmpl
@@ -506,20 +506,38 @@ Will 消息的本质是一个用户自己定一个 Will 消息（可能包含了
 
 在一些工具类以及办公类的聊天软件中经常出现需要修改已经发送的消息的内容，例如常见错别字或者标点使用错误，都可以使用使用消息修改和撤回的接口来实现：
 
+
+#### 消息的撤回
 下面的代码演示撤回一条已发送的消息：
 
 {% block code_recall_message %}
 
 {% endblock %}
 
+而对话的其他成员在消息被撤回之后会收到一个通知：
 
+{% block code_on_message_recall %}
+
+{% endblock %}
+
+#### 消息的修改
 下面的代码演示修改一条已经发送的消息：
 
 {% block code_modify_message %}
 
 {% endblock %}
 
-修改和撤回都会影响本地缓存，以及云端的聊天记录。
+而对话的其他成员在消息被修改之后会收到一个通知：
+
+{% block code_on_message_modified %}
+
+{% endblock %}
+
+
+注意：修改和撤回都会影响本地缓存，以及云端的聊天记录。
+
+
+
 
 ## 对话
 
