--- a/views/realtime_guide.tmpl
+++ b/views/realtime_guide.tmpl
@@ -483,45 +483,46 @@ SDK 会在 Conversation 上维护 `unreadMessagesCount` 字段，这个字段在
 >
 >只有在我们的消息类型完全无法满足需求的时候，才需要扩展自己的消息类型。譬如一个新闻类应用，它允许用户将某条新闻转发给好友，在展示上需要新闻的标题、摘要、图片等信息（类似于微博中的 linkcard）的话，这时候就可以扩展一个新的 NewsMessage 类。
 
-### Will 消息
-Will 消息解决的问题是：当一个用户希望自己突然掉线之后，对话的其他成员能够得到通知。
+### 遗愿消息
 
-Will 消息的本质是一个用户自己定一个 Will 消息（可能包含了一些业务逻辑相关的内容），发给云端，云端会将其缓存在云端，并不会马上发送给对话的成员，而是当云端检测到当前用户掉线了，则会立即将这条 Will 消息发送给对话的其他成员，这样可以方便开发者构建自己的断线通知的逻辑。
+遗愿消息是在一个用户突然掉线之后，系统自动通知对话的其他成员关于该成员已掉线的消息。好似在掉线后要给对话中的其他成员一个妥善的交待，所以被戏称为「遗愿」消息，如下图中的「Tom 已掉线，无法收到消息」。
 
-发送 Will 消息的代码如下：
+<img src="images/lastwill-message.png" width="400" class="responsive">
+
+要发送遗愿消息，用户需要设定好消息内容（可能包含了一些业务逻辑相关的内容）发给云端，云端并不会将其马上发送给对话的成员，而是缓存下来，一旦检测到该用户掉线，云端立即将这条遗愿消息发送出去。开发者可以利用它来构建自己的断线通知的逻辑。
 
 {% block code_send_will_message %}
 
 {% endblock %}
 
-客户端发送完毕之后就完全不用再关心这个消息了，云端会自动的在发送方掉线之后，立即发送给对话的其他成员。
-需要格外注意的 will 消息类型有如下限制：
+客户端发送完毕之后就完全不用再关心这条消息了，云端会自动在发送方掉线后通知其他成员。
+
+遗愿消息有**如下限制**：
 
 - 同一时刻只对一个对话生效
-- 当 client 主动 close 时，will 消息不会下发，系统会认为这是计划性下线。
+- 当 client 主动 close 时，遗愿消息不会下发，系统会认为这是计划性下线。
 
-而接收到 will 消息的客户端需要根据自己的消息内容来做 UI 的展现。
+接收到遗愿消息的客户端需要根据自己的消息内容来做 UI 的展现。
 
 ### 消息的撤回与修改
 
-在一些工具类以及办公类的聊天软件中经常出现需要修改已经发送的消息的内容，例如常见错别字或者标点使用错误，都可以使用使用消息修改和撤回的接口来实现：
-
-
 #### 消息的撤回
-下面的代码演示撤回一条已发送的消息：
+
+撤回一条已发送的消息：
 
 {% block code_recall_message %}
 
 {% endblock %}
 
-而对话的其他成员在消息被撤回之后会收到一个通知：
+而对话的其他成员在消息被撤回后会收到一个通知：
 
 {% block code_on_message_recall %}
 
 {% endblock %}
 
 #### 消息的修改
-下面的代码演示修改一条已经发送的消息：
+
+修改一条已经发送的消息：
 
 {% block code_modify_message %}
 
@@ -533,10 +534,9 @@ Will 消息的本质是一个用户自己定一个 Will 消息（可能包含了
 
 {% endblock %}
 
+注意：修改和撤回会更新或删除在本地缓存和云端的对应的聊天记录。
 
-注意：修改和撤回都会影响本地缓存，以及云端的聊天记录。
-
-
+{{ im.messagesLifespan("### 消息的有效期") }}
 
 
 ## 对话
