feat: add new courses (#2178)
* feat: add new courses

基于 LeanCloud 快速搭建聊天机器人
使用 LeanMessage 开发 H5 互动游戏

* remove broken links

--- a/templates/pages/opencourse.html
+++ b/templates/pages/opencourse.html
@@ -1,18 +1,5 @@
----
-layout: start.swig
-sections:
-  - LeanCloud 平台
-  - 其他
-groups:
-  - 小程序
-  - 云引擎
-  - Node.js
-opencourses:
- - title: Node.js 开发实践 
-   url: http://www.bilibili.com/video/av7503722/
-   catergory:
-   note:
----
+--- layout: start.swig sections: - LeanCloud 平台 - 其他 groups: - 小程序 - 云引擎 - Node.js opencourses: - title: Node.js 开发实践 url:
+http://www.bilibili.com/video/av7503722/ catergory: note: ---
 <div class="doc-content">
   <h1 class="font-logo text-center" style="border-bottom:0;">视频公开课</h1>
   <div id="course-list">
@@ -22,64 +9,76 @@ opencourses:
         <div class="section-content col-xs-12 col-sm-6 col-md-6">
           <h3>小程序</h3>
           <ul class="list-unstyled">
-            <li><a href="http://www.bilibili.com/video/av9082797/" target="_blank">使用 LeanCloud 实现小程序后端</a>
-              <ul class="list-unstyled note">
-                <li>介绍用 LeanCloud 作为小程序后端的优势，并演示如何增删改查数据、集成用户系统、集成微信支付、发送模板消息。</li>
-              </ul>
+            <li><a href="http://www.bilibili.com/video/av9082797/" target="_blank">使用 LeanCloud 实现小程序后端（2017-03-09）</a>
+              <p class="note">
+                介绍用 LeanCloud 作为小程序后端的优势，并演示如何增删改查数据、集成用户系统、集成微信支付、发送模板消息。
+                <p>
             </li>
           </ul>
           <h3>云引擎</h3>
           <ul class="list-unstyled">
-            <li><a href="http://www.bilibili.com/video/av7851205/ " target="_blank">云引擎容量规划</a></li>
-            <li><a href="http://www.bilibili.com/video/av7503722/" target="_blank">Node.js 开发实践</a></li>
-            <li><a href="https://xiaobanhui.com/wxTech/499808229/" target="_blank">Node.js 错误处理实践</a></li>
+            <li><a href="http://www.bilibili.com/video/av7851205/ " target="_blank">云引擎容量规划（2017-01-04）</a></li>
+            <li><a href="http://www.bilibili.com/video/av7503722/" target="_blank">Node.js 开发实践（2016-12-07）</a></li>
+            <!-- <li><a href="http://www.bilibili.com/video/av7503722/" target="_blank">NPM 包管理器应用技巧（2016-12-17）</a></li> -->
+            <!-- <li><a href="https://xiaobanhui.com/wxTech/499808229/" target="_blank">Node.js 错误处理实践</a></li> -->
+          </ul>
+          <h3>安全</h3>
+          <ul class="list-unstyled">
+            <li><a href="http://www.bilibili.com/video/av8868380/" target="_blank">LeanCloud 与数据安全（上）（2017-02-23）</a></li>
+            <li><a href="http://www.bilibili.com/video/av9017992/" target="_blank">LeanCloud 与数据安全（下）（2017-02-23）</a></li>
           </ul>
         </div>
         <div class="section-content col-xs-12 col-sm-6 col-md-6">
           <h3>数据存储</h3>
           <ul class="list-unstyled">
-            <li><a href="http://www.bilibili.com/video/av7985520/" target="_blank">数据存储关系模型设计</a></li>
-            <li><a href="http://www.bilibili.com/video/av8663659/" target="_blank">如何通过索引加速查询</a></li>
+            <li><a href="http://www.bilibili.com/video/av7985520/" target="_blank">数据存储关系模型设计（2017-01-12）</a></li>
+            <li><a href="http://www.bilibili.com/video/av8663659/" target="_blank">如何通过索引加速查询（2017-02-16）</a></li>
+            <li><a href="http://www.bilibili.com/video/av11291992/" target="_blank">LiveQuery 功能把玩<span class="text-muted">（2017-06-10）</span></a>
+              <p class="note">通过 LiveQuery，云端会将产生变更的数据通过长链接推送到各客户端，让开发者轻松实现<strong>多端的数据双向同步</strong>。</p>
+            </li>
           </ul>
-          <h3>安全</h3>
+          <h3>聊天</h3>
           <ul class="list-unstyled">
-            <li><a href="http://www.bilibili.com/video/av8868380/" target="_blank">LeanCloud 与数据安全（上）</a></li>
-            <li><a href="http://www.bilibili.com/video/av9017992/" target="_blank">LeanCloud 与数据安全（下）</a></li>
-            <li><a href="http://www.bilibili.com/video/av11291992/" target="_blank">LiveQuery 功能把玩（2017-06-14）</a></li>
+            <li><a href="https://www.bilibili.com/video/av11454137/" target="_blank">在云引擎上快速搭建<strong>聊天机器人</strong>（2017-06-17）</a></li>
+            <li><a href="https://www.bilibili.com/video/av11608322/" target="_blank">使用聊天组件开发 H5 互动游戏（2017-06-24）</a>
+              <p class="note">学习使用 HTML 5 Canvas、Node 7.6 Async/Await 和 LeanCloud IM 组件，从零打造多人版的《你画我猜》小游戏。</p>
+            </li>
           </ul>
+
         </div>
-        <!-- end of .section-content --> 
+        <!-- end of .section-content -->
       </div>
-      <!-- end of .row(nested) --> 
+      <!-- end of .row(nested) -->
     </div>
     <!-- end of .section -->
 
-    <div class="section">
-      <h2 class="section-title"><span>其他</span></h2>
-      <div class="row">
-        <div class="section-content col-xs-12 col-sm-6 col-md-6">
-          <!-- <h3>小程序</h3> -->
-          <ul class="list-unstyled">
-            <li><a href="https://xiaobanhui.com/wxTech/613240271/" target="_blank">Linux 上的两个你一定要知道的性能调优工具</a>
-            </li>
-            <li><a href="https://xiaobanhui.com/wxTech/579954116/" target="_blank">从 HTTP 0.9 到 QUIC</a>
-            </li>
-            <li><a href="http://xiaobanhui.com/wxTech/059029816/" target="_blank">ESNext in LeanCloud Realtime SDK</a></li>
-          </ul>
-        </div>
-
-        <div class="section-content col-xs-12 col-sm-6 col-md-6">
-          <!-- <h3>数据存储</h3> -->
-          <ul class="list-unstyled">
-            <li><a href="https://xiaobanhui.com/wxTech/259682651/" target="_blank">Garbage First GC 实现梳理</a></li>
-            <li><a href="https://xiaobanhui.com/wxTech/595498029/" target="_blank">X Window 与 Wayland对比与介绍</a></li>
-          </ul>
-        </div>
-        <!-- end of .section-content --> 
-      </div>
-      <!-- end of .row(nested) --> 
+    <!-- <div class="section">
+  <h2 class="section-title"><span>其他</span></h2>
+  <div class="row">
+    <div class="section-content col-xs-12 col-sm-6 col-md-6">
+      <ul class="list-unstyled">
+        <li><a href="https://xiaobanhui.com/wxTech/613240271/"
+             target="_blank">Linux 上的两个你一定要知道的性能调优工具</a>
+        </li>
+        <li><a href="https://xiaobanhui.com/wxTech/579954116/"
+             target="_blank">从 HTTP 0.9 到 QUIC</a>
+        </li>
+        <li><a href="http://xiaobanhui.com/wxTech/059029816/"
+             target="_blank">ESNext in LeanCloud Realtime SDK</a></li>
+      </ul>
     </div>
-    <!-- end of .section -->
+
+    <div class="section-content col-xs-12 col-sm-6 col-md-6">
+      <ul class="list-unstyled">
+        <li><a href="https://xiaobanhui.com/wxTech/259682651/"
+             target="_blank">Garbage First GC 实现梳理</a></li>
+        <li><a href="https://xiaobanhui.com/wxTech/595498029/"
+             target="_blank">X Window 与 Wayland对比与介绍</a></li>
+      </ul>
+    </div>
+  </div>
+</div> -->
+
 
 
   </div>
