chore: fix Front-matter markup
YAML compilation error

--- a/templates/pages/opencourse.html
+++ b/templates/pages/opencourse.html
@@ -1,5 +1,6 @@
---- layout: start.swig sections: - LeanCloud 平台 - 其他 groups: - 小程序 - 云引擎 - Node.js opencourses: - title: Node.js 开发实践 url:
-http://www.bilibili.com/video/av7503722/ catergory: note: ---
+--- 
+layout: start.swig   
+---
 <div class="doc-content">
   <h1 class="font-logo text-center" style="border-bottom:0;">视频公开课</h1>
   <div id="course-list">
