feat: [云引擎] 非主要组的云函数访问 (#2191)
* feat: [云引擎] 非主要组的云函数访问

Closes #2187

* update navs

* rephrase

--- a/templates/include/doc-nav.html
+++ b/templates/include/doc-nav.html
@@ -160,6 +160,7 @@
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-hover="dropdown" href="#">REST API</a>
           <ul class="dropdown-menu">
             <li><a href="rest_api.html">数据存储 API</a></li>
+            <li><a href="leanengine-rest-api.html">云引擎 API</a></li>
             <li><a href="rest_api.html#Push_通知">消息推送 API</a></li>
             <li><a href="realtime_rest_api.html">实时通信 API</a></li>
             {% if node != 'qcloud' and node != 'us' %}
