fix: broken link to Relation#Pointer

--- a/views/leanstorage_guide.tmpl
+++ b/views/leanstorage_guide.tmpl
@@ -291,7 +291,7 @@ Pointer 只是个描述并没有具象的类与之对应，它与 `{{relationObj
 
 {% block code_pointer_comment_one_to_many_todoFolder %}{% endblock %}
 
-相关内容可参考 [关联数据查询](#{{relationObjectName}}_查询)。
+相关内容可参考 [关联数据查询](relation-guide.html#Pointers_查询)。
 
 #### 地理位置
 地理位置是一个特殊的数据类型，{{productName}} 封装了 `{{geoPointObjectName}}` 来实现存储以及相关的查询。
