feat: [存储] Android 增加错误说明: already has one request sending (#2234)
Closes #2209

--- a/views/leanstorage_guide.tmpl
+++ b/views/leanstorage_guide.tmpl
@@ -1082,6 +1082,8 @@ CQL 是 {{productName}} 独创的使用类似 SQL 语法来实现云端查询功
 
 {% block use_js_in_webview %}{% endblock %}
 
+{% block faq %}{% endblock %}
+
 ## 相关文档
 
 - {{ tutorial_restaurant }}
