fix: make single signon more descriptive
Closes #2303

--- a/views/leanstorage_guide.tmpl
+++ b/views/leanstorage_guide.tmpl
@@ -930,7 +930,7 @@ CQL 是 {{productName}} 独创的使用类似 SQL 语法来实现云端查询功
 #### 单点登录 
 
 如果想实现在当前设备 A 上登录后，强制令之前在其他设备上的登录失效，可以按照以下方案来实现：
-
+{# 2017-09-20 hide method 1
 **方案一**：
 
 1. 设备 A 登录成功后，调用 AVUser 的 `refreshSessionToken` 方法，更新服务端的 sessionToken。
@@ -939,14 +939,15 @@ CQL 是 {{productName}} 独创的使用类似 SQL 语法来实现云端查询功
 
 
 **方案二**：
-
+#}
 1. 建立一个设备表，记录用户登录信息和当前设备的信息。
 1. 设备 A 登录成功后，更新设备表，将当前设备标记为当前用户登录的最新设备。
 1. 设备 B 中的应用启动时，检查设备表，发现最新设备不是当前设备，调用 AVUser 的 `logout` 方法退出登录。
-1. 集成 [LiveQuery 用户登录事件][livequery-event-login]，当设备 B 收到当前用户的登录事件时，调用 AVUser 的 `logout` 方法退出当前登录。
+1. 集成 [LiveQuery 用户登录事件][livequery-event-login]，当设备 B 收到当前用户的登录事件时，检查最新设备不是当前设备，调用 AVUser 的 logout 方法退出当前登录。
 
+{#
 {{ docs.note("较之方案一，方案二要多维护一张设备表，步骤稍繁琐，适用于不具备 `refreshSessionToken` 方法的 SDK。") }}
-
+#}
 #### 当前用户
 
 打开微博或者微信，它不会每次都要求用户都登录，这是因为它将用户数据缓存在了客户端。
