临时启用部署在云引擎的文档搜索 https://newdoc.leanapp.cn

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -75,7 +75,7 @@
         </ul>
         <!-- hide search input on the home page -->
         {% if basename != "index" %}
-          <form role="search" action="/search.html" method="get">
+          <form role="search" action="https://newdoc.leanapp.cn/search" method="get">
             <div class="app-search">
               <input name="q" type="text" class="form-control" placeholder="搜索文档&hellip;">
             </div>
