--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -10,7 +10,7 @@ layout: index.swig
       <a href="sdk_down.html" class="btn btn-default" style="margin-top:2em;">SDK 下载</a> </div >
     {% else %}
     <!-- <h1 class="font-logo">Documentation</h1> -->
-    <form class="hero-search" role="search" action="/search.html" method="get">
+    <form class="hero-search" role="search" action="https://newdoc.leanapp.cn/search" method="get">
       <div class="form-group" style="margin:0 10px;">
         <input id="site-search" name="q" type="text" class="form-control input-lg" placeholder="&#xf17a 输入错误代码、关键字来搜索&hellip;">
       </div>
