--- a/views/leanengine_webhosting_guide.tmpl
+++ b/views/leanengine_webhosting_guide.tmpl
@@ -181,7 +181,7 @@ systemDependencies:
 
 - `ffmpeg` 一个音视频处理工具库
 - `imagemagick` 一个图片处理工具库
-- `fonts-wqy` 文泉驿点阵宋体、文泉驿微米黑，通常和 phantomjs 配饰来显示中文
+- `fonts-wqy` 文泉驿点阵宋体、文泉驿微米黑，通常和 phantomjs 配合来显示中文。
 - `phantomjs` 一个无 UI 的 WebKit 浏览器
 
 注意添加系统依赖将会拖慢部署速度，因此请不要添加未用到的依赖。
