--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -71,7 +71,43 @@ body {
 .text-thin {
   font-weight: normal!important;
 }
+// adopted from BootStrap 4.0
+.custom-select {
+  display: inline-block;
+  max-width: 100%;
+  /*  height: calc(2.25rem + 2px); */
+  height: auto;
+  padding: .375rem 1.75rem .375rem .75rem;
+  line-height: 1.25;
+  color: #464a4c;
+  vertical-align: middle;
+  background: #fff url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23333' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat right .75rem center;
+  -webkit-background-size: 8px 10px;
+  background-size: 8px 10px;
+  border: 1px solid rgba(0,0,0,.4);
+  border-radius: .25rem;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  
+  &:hover, &:focus {
+    background: #fff url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%233090e4' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat right .75rem center;
+  }
+
+  &:focus {
+    border-color: #5cb3fd;
+    outline: 0;
+  }
+}
+
 .doc-content {
+  .help-block {
+    color: rgba(0,0,0,.35);
+
+    &.text-warning {
+      color: #ff8c2c;
+      opacity: .75;
+    }
+  }
 
   .section-title {
     overflow: hidden;
